--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-directive-touch": "^1.0.28",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
