--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "less-loader": "^11.0.0",
+    "video.js": "^7.20.1",
+    "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.6.14",
     "vue-directive-touch": "^1.0.28",
     "vue-router": "^3.5.1",
@@ -17,6 +20,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.0",
     "@vue/cli-service": "^5.0.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.2",
     "vue-template-compiler": "^2.6.14"
   }
 }
